# essl-node-middleware-gym-mgm

./: .gitignore  ALTERNATIVE_SOLUTION.md  BUGFIX_POLLING_WARNINGS.md  BUGFIX_REALTIME_EVENTS.md  FEATURE_AUTO_DISCOVERY_RETRY.md  NETLINK_ROUTER_FIX.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  WIFI_TROUBLESHOOTING.md  build-windows.ps1  debug-jimp.js  detailed-network-test.ps1  diagnose-network.ps1  disable-firewall-test.ps1  middleware.js  package-lock.json  package.json  setup-firewall-for-build.ps1  test-wifi-fix.ps1
.github/workflows/: release.yml
config/: deviceConfig.js  firebaseConfig.js  userSettings.js
electron/: generate-icon.js  icon.png.md  index.html  main.js  preload.js  renderer.electron.js  renderer.js  styles.css  tauri-api.js
middleware/: rateLimiter.js
routes/: api.js  userManagement.js
scripts/: fix-png.ps1  generate-ico-dotnet.ps1  generate-icons.js  generate-icons.ps1  manual-ico.js  prepare-sidecar.js
services/: backend-server.js  database.js  deviceService.js  firestoreService.js  memberEnrollmentService.js  mockDeviceService.js  offlineStorage.js  socketService.js  syncService.js  userService.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
utils/: dateUtils.js  logger.js  networkScanner.js  performanceMonitor.js  retryHelper.js
