[package]
name = "zk-attendance-desktop"
version = "1.0.0"
description = "ZK Teco Attendance Desktop App"
authors = ["You"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "shell-open", "shell-sidecar", "http-all" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
